# ref-finder-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  test_react.py  test_react_direct.py  test_server.py
src/mcp_textref/: __main__.py
src/mcp_textref/models/: paper.py
src/mcp_textref/services/: citation.py
src/ref_finder_mcp/: __main__.py  server.py
src/ref_finder_mcp/clients/: arxiv.py  arxiv_html.py  google_scholar.py  semantic_scholar.py
src/ref_finder_mcp/utils/: dedup.py
tests/: test_arxiv_html.py  test_dedup.py  test_paper.py  test_server_integration.py
